개인 자료 넣음

--- a/data/pages/works_me_individual1.html
+++ b/data/pages/works_me_individual1.html
@@ -205,15 +205,15 @@
                 <div class="hover01 column">
                     <div>
                         <figure id="person" class="pc_only"><img src="../images/profile/34/김나영34.png" ></figure>
-                        <figure class="mobile_only"><img src="../images/individual/mobile/김나영_mobile.jpg" ></figure>
+                        <figure id = "person_mobile" class="mobile_only"><img src="../images/profile/1_1size/김나영.jpg" ></figure>
                     </div>
                 </div>
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 김나영 </div>
-                        <div id="person_name_eng"> PARK HEE JE </div>
+                        <div id="person_name_eng"> KIM SU BIN </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;koik105@naver.com </div>
+                    <div id="email"> Email&nbsp;&nbsp;&nbsp;sukong0507@gmail.com </div>
                 </div>
             </div>
         </div>
@@ -221,46 +221,30 @@
         <div class="scroll-section">
             <div class="work_information">
                 <div id="concept">CONCEPT</div>
-                <div id="work_name">멀티 페르소나</div>
+                <div id="work_name">Personal Space</div>
                 <div id="work_explain">
-                    집을 떠올려 보면 온통 추억이 가득하다. 어릴적 사진이 들어있는 액자.. 지금은 안쓰는 
-                    카세트.. 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. 그렇지만 그 시간
-                    만큼 추억이 입혀져 사람에게 특별한 의미를 가지게 된다. 하지만 추억의 물건은 현대의 
-                    것에 비하면 기능이 부족하여 굳이 쓸 필요가 없어졌다. 그렇더라도 우리는 버릴 수 없다.
-                    손이 닿는 순간 그때 그 시간으로 돌아가기 때문에.</div>
+                    무의식중에 다른 사람과 멀리 떨어진 자리에 앉으려고 한 이유, 만원인 엘레베이터에서 불안함을 느낀 이유. <br>
+                    사람들은 누구나 다른 사람으로부터 침범 받지 않으려 하는 보이지 않는 공간(Personal space)을 가지고 있다. 
+                    가족이나 친한 사이조차도 서로 간에 침해 받고 싶지 않은 개인적 공간이 있기 마련이다. 
+                    당신의 퍼스널 스페이스는 잘 지켜지고 있는가? 또한, 상대의 퍼스널 스페이스를 나의 공간만큼 존중해주고 있는가?
+                    본 전시를 통해 이 '개인적 공간'에 대한 이야기를 해보고자 한다. </div>
             </div>
         </div>
             <div class="scroll-section section-divider" id="section__poster">
                 <div class="dd">
                     <div class="video_name sa sa-up">CONCEPT POSTER</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" 맘스터치 "</div>
+                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" 개인의 공간 "</div>
                     <div class="touch_information sa sa-down pc_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        <br><br><br><br><br><br>
+                    </div>
                    
                 </div>
                 <div>
-                    <figure class="individual_img sa sa-right pc_only" data-sa-delay="400"><img src="../images/individual/poster.png"></figure>
-                    <figure class="mobile_only sa sa-scaleUp img_mar" data-sa-delay="400"><img src="../images/individual/mobile/poster_mobile.png"></figure>
+                    <figure class="individual_img sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/ksb_poster.png"></figure>
                 </div>
                 <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                    집을 떠올려 보면 온통
-                    추억이 가득하다. 어릴
-                    적 사진이 들어있는 액
-                    자.. 지금은 안쓰는 카세
-                    트.. 집에 있는 과거
-                    의 물건은 시간이 지남
-                    에 따라 닳고 낡아간
-                    다. 그렇지만 그 시간
-                    만큼 추억이 입</div>
+                    <br><br><br><br></div>
             </div>
 
 
@@ -275,46 +259,41 @@
                 <div class="inter">
                     <div class="inter_how sa sa-up"> INTERACTIVE ART</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 맘스터치 "</div>
-                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/individual_interaction.PNG" class="mobile__img"></figure>
+                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" Personal Space "</div>
+                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/view/ksb_view_1.png" class="mobile__img"></figure>
                     <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        타인으로부터 떨어지고 싶은 느낌이 드는 영역(Personal space)은 흔히 '거품'으로 비유된다. 
+                        거품의 크기는 사람마다, 상황마다, 문화마다 다르기 때문에 자신만의 거리감으로 상대방에게 다가가려고 하면 상대방이 불쾌감을 느낄 수 있다.
+                        작품 속 각자의 공간을 둘러싼 서로 다른 크기의 버블은 공간을 지키기 위해 서로를 밀어낼 것이다. 밀어내는 타인의 버블에 반복적으로 
+                        다가간다면 늘어나는 불쾌감으로 인해 터져버릴 수 있으니 주의하자.</div>
                 </div>
                 <div class="how">
                     <div>
                         <div class="how pc_only">
-                            <div class="howto sa sa-up ">사용 도구</div>
-                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터</div>
+                            <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
+                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터, 아두이노 센서(바람센서, 초음파센서)</div>
                         </div>
                         <div class="how">
-                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" 맘스터치 "</div>
+                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" Personal Space "</div>
                             <div class="howto_explain pc_only"> 
-                                <div class = "sa sa-left" data-sa-delay="300">집을 떠올려 보면 온통 추억이 가득하다.</div>
-                                <div class = "sa sa-left" data-sa-delay="400">어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. </div>
-                                <div class = "sa sa-left" data-sa-delay="500"> 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. </div>
-                                <div class = "sa sa-left" data-sa-delay="600">그렇지만 그 시간만큼 추억이 입</div>
+                                <div class = "sa sa-left" data-sa-delay="300">타인으로부터 떨어지고 싶은 느낌이 드는 영역(Personal space)은 흔히 '거품'으로 비유된다. </div>
+                                <div class = "sa sa-left" data-sa-delay="400">거품의 크기는 사람마다, 상황마다, 문화마다 다르기 때문에 자신만의 거리감으로 상대방에게 다가가려고 하면 상대방이 불쾌감을 느낄 수 있다. </div>
+                                <div class = "sa sa-left" data-sa-delay="500"> 작품 속 각자의 공간을 둘러싼 서로 다른 크기의 버블은 공간을 지키기 위해 서로를 밀어낼 것이다. </div>
+                                <div class = "sa sa-left" data-sa-delay="600">밀어내는 타인의 버블에 반복적으로 다가간다면 늘어나는 불쾌감으로 인해 터져버릴 수 있으니 주의하자. </div>
                             </div>
                         </div>
                             <div class="how" style="min-width:320px;width:100%;">
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/individual_how1.PNG"></figure>
-                                    <div class="sequence_ex sa sa-right pc_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/flow/ksb/ksb_flow_1.png"></figure>
+                                    <div class="sequence_ex sa sa-right pc_only">1. 화면에는 많은 버블들이 움직이고 있고, 유저가 선반 앞으로 다가간다.</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/individual_how2.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/flow/ksb/ksb_flow_2.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 유저의 거리가 가까워지면 화면이 전환된다. 유저는 바람 센서에 바람을 불어 버블의 크기를 정한다.</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/individual_how3.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/flow/ksb/ksb_flow_3.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 유저의 버블이 많은 버블들과 함께 섞이면서 유저는 손의 움직임을 통해 버블을 조종할 수 있다. </div>
                                 </div>
                             </div>
                     </div>
@@ -327,20 +306,19 @@
         <div style="overflow-x:auto">
             <div class = "how_mobile" style="min-width:320px;width:100%;">
                 <div>
-                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/mobile/individual_how1_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/flow/ksb/ksb_flow_1.png"></figure>  
+                    <div class="sequence_ex sa sa-right mobile_only">1. 화면에는 많은 버블들이 움직이고 있고, 유저가 선반 앞으로 다가간다.</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/mobile/individual_how2_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/flow/ksb/ksb_flow_2.png"></figure>  
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 유저의 거리가 가까워지면 화면이 전환된다. 유저는 바람 센서에 바람을 불어 버블의 크기를 정한다.</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/mobile/individual_how3_mobile.png"></figure>
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/flow/ksb/ksb_flow_3.png"></figure>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 유저의 버블이 많은 버블들과 함께 섞이면서 유저는 손의 움직임을 통해 버블을 조종할 수 있다. </div>
                 </div>  
             </div> 
         </div>
-        
         <div class="scroll-bar">
             <div class="scroll-bar__margin"></div>
             <div class="scroll-bar__divider"><a class="scroll-bar__divider__name now" data-target="#section__indivisual">individual</a></div>
