--- a/data/pages/works_me_individual3.html
+++ b/data/pages/works_me_individual3.html
@@ -7,14 +7,10 @@
     <meta name="viewport"content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>PNU DT 2021</title>
     <link rel="stylesheet" type="text/css" href="../style/style.css">
-<<<<<<< HEAD
     <link rel="stylesheet" type="text/css" href="../style/individual.css">    
     <link rel="stylesheet" type="text/css" href="../style/scrollbar.css">
-
-=======
     <link rel="stylesheet" type="text/css" href="../style/individual.css">
     <link rel="stylesheet" type="text/css" href="../style/scrollbar.css">
->>>>>>> f41cc5b29af1372797a24f4b52bb9d6dbc0f9b60
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
 
 </head>
@@ -211,7 +207,7 @@
                 <div class="hover01 column">
                     <div>
                         <figure id="person" class="pc_only"><img src="../images/profile/34/김재환34.png" ></figure>
-                        <figure class="mobile_only"><img src="../images/individual/mobile/김재환_mobile.jpg" ></figure>
+                        <figure id = "person_mobile" class="mobile_only"><img src="../images/profile/1_1size/김재환.jpg" ></figure>
                     </div>
                 </div>
                 <div class="person_information">
@@ -245,8 +241,7 @@
                    
                 </div>
                 <div>
-                    <figure class="individual_img sa sa-right pc_only" data-sa-delay="400"><img src="../images/individual/poster/kjh_poster.jpg"></figure>
-                    <figure class="mobile_only sa sa-scaleUp img_mar" data-sa-delay="400"><img src="../images/individual/mobile/poster_mobile.png"></figure>
+                    <figure class="individual_img sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/kjh_poster.jpg"></figure>
                 </div>
                 <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
                     <br><br><br><br></div>
@@ -267,20 +262,16 @@
                     <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" We Memo Me "</div>
                     <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/view/kjh_view_1.png" class="mobile__img"></figure>
                     <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        코로나 시국을 겪으며, 그리고 나이도 들어가면서, 개인화된 삶이 길어졌다. ‘나’는 우리와 마주보고, 인사하며, 우리와 함께 추억을
+                         만들어 가는 것이 점점 낯설다. 가끔 찾아보는 과거의 ‘우리’모습을 보며 갈증하고, 그리워하지만 현재의 ‘나’는 다시 ‘우리’ 속으로 들어가기가 두렵다.
+                        하지만 ME의 글자를 뒤집어 WE가 되었듯이 우리는 단순히 서로 마주하는 것만으로도 함께함을 느낄 수 있다. 과거 누군가인 ‘ME’의 흔적은
+                         이곳에 남아 현재의 ‘나’에게 남기는 그림이 되고, 과거와 현재의 'ME‘가 남긴 흔적은 ‘WE’의 그림이 되어 미래의 ‘나’에게 전해진다.
+                        언젠가 다시 ‘우리’의 삶을, 추억을 만들어갈 그날을 기약하며 오늘의 추억을 작품 속에 함께 남겨보자.</div>
                 </div>
                 <div class="how">
                     <div>
                         <div class="how pc_only">
-                            <div class="howto sa sa-up ">사용 도구</div>
+                            <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
                             <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터</div>
                         </div>
                         <div class="how">
@@ -319,15 +310,15 @@
         <div style="overflow-x:auto">
             <div class = "how_mobile" style="min-width:320px;width:100%;">
                 <div>
-                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/mobile/individual_how1_mobile.png"></figure>  
+                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/flow/kjh/kjh_flow_1.png"></figure>  
                     <div class="sequence_ex sa sa-right mobile_only">1. 앞선 관객들이 다녀간 흔적이 화면에 다양한 색으로 남아있다.</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/mobile/individual_how2_mobile.png"></figure>  
+                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/flow/kjh/kjh_flow_2.png"></figure>  
                     <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 카메라 앞에서 움직이면 그 흔적들이 화면에 남는다.</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/mobile/individual_how3_mobile.png"></figure>
+                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/flow/kjh/kjh_flow_3.png"></figure>
                     <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. space bar를 누르면 그 흔적들이 모두 사라지고 화면이 새까맣게 리셋된다.</div>
                 </div>  
             </div> 
