--- a/data/pages/works_me_individual5.html
+++ b/data/pages/works_me_individual5.html
@@ -204,16 +204,16 @@
             <div class="scroll-section section-divider" id="section__indivisual">
                 <div class="hover01 column">
                     <div>
-                        <figure id="person" class="pc_only"><img src="../images/profile/이황준11.jpg" ></figure>
-                        <figure class="mobile_only"><img src="../images/individual/mobile/이황준_mobile.jpg" ></figure>
+                        <figure id="person" class="pc_only"><img src="../images/profile/34/이황준34.png" ></figure>
+                        <figure id = "person_mobile" class="mobile_only"><img src="../images/profile/1_1size/이황준.png" ></figure>
                     </div>
                 </div>
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 이황준 </div>
-                        <div id="person_name_eng"> PARK HEE JE </div>
+                        <div id="person_name_eng"> KIM SU BIN </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;koik105@naver.com </div>
+                    <div id="email"> Email&nbsp;&nbsp;&nbsp;sukong0507@gmail.com </div>
                 </div>
             </div>
         </div>
@@ -221,46 +221,29 @@
         <div class="scroll-section">
             <div class="work_information">
                 <div id="concept">CONCEPT</div>
-                <div id="work_name">멀티 페르소나</div>
+                <div id="work_name">미정이</div>
                 <div id="work_explain">
-                    집을 떠올려 보면 온통 추억이 가득하다. 어릴적 사진이 들어있는 액자.. 지금은 안쓰는 
-                    카세트.. 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. 그렇지만 그 시간
-                    만큼 추억이 입혀져 사람에게 특별한 의미를 가지게 된다. 하지만 추억의 물건은 현대의 
-                    것에 비하면 기능이 부족하여 굳이 쓸 필요가 없어졌다. 그렇더라도 우리는 버릴 수 없다.
-                    손이 닿는 순간 그때 그 시간으로 돌아가기 때문에.</div>
+                    아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 
+                    아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 </div>
             </div>
         </div>
             <div class="scroll-section section-divider" id="section__poster">
                 <div class="dd">
                     <div class="video_name sa sa-up">CONCEPT POSTER</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" 맘스터치 "</div>
+                    <div class="mom_touch_square sa sa-scaleUp" data-sa-delay="100">" 들여다보기 "</div>
                     <div class="touch_information sa sa-down pc_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        거울은 자기 내면과 외면을 담아낸 자화상이라고 할 수 있다.<br>
+                        ‘거울 속 나’의 모습을 들여다보며 ‘거울 밖 나’의 모습을 되비추는 시간을 가져보자.
+                    </div>
                    
                 </div>
                 <div>
-                    <figure class="individual_img sa sa-right pc_only" data-sa-delay="400"><img src="../images/individual/poster.png"></figure>
-                    <figure class="mobile_only sa sa-scaleUp img_mar" data-sa-delay="400"><img src="../images/individual/mobile/poster_mobile.png"></figure>
+                    <figure class="square_poster" sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/lhj_poster.png"></figure>
                 </div>
                 <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                    집을 떠올려 보면 온통
-                    추억이 가득하다. 어릴
-                    적 사진이 들어있는 액
-                    자.. 지금은 안쓰는 카세
-                    트.. 집에 있는 과거
-                    의 물건은 시간이 지남
-                    에 따라 닳고 낡아간
-                    다. 그렇지만 그 시간
-                    만큼 추억이 입</div>
+                    거울은 자기 내면과 외면을 담아낸 자화상이라고 할 수 있다.<br>
+                        ‘거울 속 나’의 모습을 들여다보며 ‘거울 밖 나’의 모습을 되비추는 시간을 가져보자.
             </div>
 
 
@@ -275,46 +258,40 @@
                 <div class="inter">
                     <div class="inter_how sa sa-up"> INTERACTIVE ART</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 맘스터치 "</div>
-                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/individual_interaction.PNG" class="mobile__img"></figure>
+                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 자화상(Self-portrait) "</div>
+                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/view/lhj_view_1.png" class="mobile__img"></figure>
                     <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        사람들은 타인의 시선을 스스로 만들어내고 스포트라이트 안에 자기 자신을 배치한다. 실제 존재하지도 않는 스포트라이트에 자신의 상황을 지나치게 주목하고, 
+                        과장하고, 걱정하고, 그 생각에 사로잡혀 자신을 스스로 구속하며 일희일비하는 것이다. 이제 그만 스포트라이트에서 벗어날 시간이다.
+                        “자신을 끄집어내다”라는 의미의 ‘자화상(Self-portrait)’을 통해 타인과 집단에 과 의식하여 자아를 잃어버린 사람들이 억눌린 감정에서 벗어나 자유롭게 자기 내면의 모습을 드러내고자 한다.</div>
                 </div>
                 <div class="how">
                     <div>
                         <div class="how pc_only">
-                            <div class="howto sa sa-up ">사용 도구</div>
-                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터</div>
+                            <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
+                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터, 아두이노 센서(바람센서, 초음파센서)</div>
                         </div>
                         <div class="how">
-                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" 맘스터치 "</div>
+                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" 자화상(Self-portrait) "</div>
                             <div class="howto_explain pc_only"> 
-                                <div class = "sa sa-left" data-sa-delay="300">집을 떠올려 보면 온통 추억이 가득하다.</div>
-                                <div class = "sa sa-left" data-sa-delay="400">어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. </div>
-                                <div class = "sa sa-left" data-sa-delay="500"> 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. </div>
-                                <div class = "sa sa-left" data-sa-delay="600">그렇지만 그 시간만큼 추억이 입</div>
+                                <div class = "sa sa-left" data-sa-delay="300">사람들은 타인의 시선을 스스로 만들어내고 스포트라이트 안에 자기 자신을 배치한다. </div>
+                                <div class = "sa sa-left" data-sa-delay="400">실제 존재하지도 않는 스포트라이트에 자신의 상황을 지나치게 주목하고, 과장하고, 걱정하고,  </div>
+                                <div class = "sa sa-left" data-sa-delay="500"> 그 생각에 사로잡혀 자신을 스스로 구속하며 일희일비하는 것이다. 이제 그만 스포트라이트에서 벗어날 시간이다.</div>
+                                <div class = "sa sa-left" data-sa-delay="600">“자신을 끄집어내다”라는 의미의 ‘자화상(Self-portrait)’을 통해 타인과 집단에 과 의식하여 자아를 잃어버린 사람들이 억눌린 감정에서 벗어나 자유롭게 자기 내면의 모습을 드러내고자 한다. </div>
                             </div>
                         </div>
                             <div class="how" style="min-width:320px;width:100%;">
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/individual_how1.PNG"></figure>
-                                    <div class="sequence_ex sa sa-right pc_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/flow/lhj/lhj_flow_1.png"></figure>
+                                    <div class="sequence_ex sa sa-right pc_only">1. 화면 중앙에 스포트라이트 생성.</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/individual_how2.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/flow/lhj/lhj_flow_2.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 스포트라이트가 유저를 따라다님</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/individual_how3.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/flow/lhj/lhj_flow_3.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 유저가 스포트라이트 안에 위치하면 화면 효과와 사운드 생성 </div>
                                 </div>
                             </div>
                     </div>
@@ -327,16 +304,16 @@
         <div style="overflow-x:auto">
             <div class = "how_mobile" style="min-width:320px;width:100%;">
                 <div>
-                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/mobile/individual_how1_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/flow/lhj/lhj_flow_1.png"></figure>  
+                    <div class="sequence_ex sa sa-right mobile_only">1. 화면 중앙에 스포트라이트 생성</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/mobile/individual_how2_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/flow/lhj/lhj_flow_2.png"></figure>  
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 스포트라이트가 유저를 따라다님</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/mobile/individual_how3_mobile.png"></figure>
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/flow/lhj/lhj_flow_3.png"></figure>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 유저가 스포트라이트 안에 위치하면 화면 효과와 사운드 생성 </div>
                 </div>  
             </div> 
         </div>
