--- a/data/pages/works_memo_individual5.html
+++ b/data/pages/works_memo_individual5.html
@@ -204,16 +204,16 @@
             <div class="scroll-section section-divider" id="section__indivisual">
                 <div class="hover01 column">
                     <div>
-                        <figure id="person" class="pc_only"><img src="../images/profile/우승용11.jpg" ></figure>
-                        <figure class="mobile_only"><img src="../images/individual/mobile/우승용_mobile.jpg" ></figure>
+                        <figure id="person" class="pc_only"><img src="../images/profile/34/우승용34.png" ></figure>
+                        <figure id = "person_mobile" class="mobile_only"><img src="../images/profile/1_1size/우승용.jpg" ></figure>
                     </div>
                 </div>
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 우승용 </div>
-                        <div id="person_name_eng"> PARK HEE JE </div>
+                        <div id="person_name_eng"> KIM SU BIN </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;koik105@naver.com </div>
+                    <div id="email"> Email&nbsp;&nbsp;&nbsp;sukong0507@gmail.com </div>
                 </div>
             </div>
         </div>
@@ -221,46 +221,29 @@
         <div class="scroll-section">
             <div class="work_information">
                 <div id="concept">CONCEPT</div>
-                <div id="work_name">멀티 페르소나</div>
+                <div id="work_name">미정이</div>
                 <div id="work_explain">
-                    집을 떠올려 보면 온통 추억이 가득하다. 어릴적 사진이 들어있는 액자.. 지금은 안쓰는 
-                    카세트.. 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. 그렇지만 그 시간
-                    만큼 추억이 입혀져 사람에게 특별한 의미를 가지게 된다. 하지만 추억의 물건은 현대의 
-                    것에 비하면 기능이 부족하여 굳이 쓸 필요가 없어졌다. 그렇더라도 우리는 버릴 수 없다.
-                    손이 닿는 순간 그때 그 시간으로 돌아가기 때문에.</div>
+                    아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 
+                    아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 </div>
             </div>
         </div>
             <div class="scroll-section section-divider" id="section__poster">
                 <div class="dd">
-                    <div class="video_name sa sa-up">CONCEPT POSTER</div>
+                    <div class="video_name sa sa-up">OWN TIME</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" 맘스터치 "</div>
+                    <div class="mom_touch_square sa sa-scaleUp" data-sa-delay="100">" 들여다보기 "</div>
                     <div class="touch_information sa sa-down pc_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        거울은 자기 내면과 외면을 담아낸 자화상이라고 할 수 있다.<br>
+                        ‘거울 속 나’의 모습을 들여다보며 ‘거울 밖 나’의 모습을 되비추는 시간을 가져보자.
+                    </div>
                    
                 </div>
                 <div>
-                    <figure class="individual_img sa sa-right pc_only" data-sa-delay="400"><img src="../images/individual/poster.png"></figure>
-                    <figure class="mobile_only sa sa-scaleUp img_mar" data-sa-delay="400"><img src="../images/individual/mobile/poster_mobile.png"></figure>
+                    <figure class="square_poster" sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/wsy_poster.jpg"></figure>
                 </div>
                 <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                    집을 떠올려 보면 온통
-                    추억이 가득하다. 어릴
-                    적 사진이 들어있는 액
-                    자.. 지금은 안쓰는 카세
-                    트.. 집에 있는 과거
-                    의 물건은 시간이 지남
-                    에 따라 닳고 낡아간
-                    다. 그렇지만 그 시간
-                    만큼 추억이 입</div>
+                    거울은 자기 내면과 외면을 담아낸 자화상이라고 할 수 있다.<br>
+                        ‘거울 속 나’의 모습을 들여다보며 ‘거울 밖 나’의 모습을 되비추는 시간을 가져보자.
             </div>
 
 
@@ -275,46 +258,44 @@
                 <div class="inter">
                     <div class="inter_how sa sa-up"> INTERACTIVE ART</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 맘스터치 "</div>
-                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/individual_interaction.PNG" class="mobile__img"></figure>
+                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 휩쓸리다 "</div>
+                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/view/wsy_view1.png" class="mobile__img"></figure>
                     <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        파도 속에 몸을 맡기면 원하지 않은 방향으로 휩쓸리곤 한다. 움직임은 파도의 세기에 따라 쉽게 다시 자리를 잡을 수도 혹은 버티는 것조차 힘겨울 때도 있다. 
+                        삶도 마찬가지다. 살아가면서 내가 원하는 방향으로 흘러갈 때도 있고 자신과 다른 의견에 휩쓸릴 때도 있다. 
+                        물론 다시금 자신의 방향으로 돌아올 수도 있지만 어쩌면 돌아오지 못해 자신의 정체성마저 흔들릴 수 있다.
+                        작품 속 파도는 나의 정체성을 흔들 수 있는 다른 요소들을 의미한다. 관객이 움직일수록 파도는 느려지고 잠잠해진다. 하지만 움직이지 않으면 파도는 다시 거세지고 관객을 휩쓸고 지나간다. 
+                        힘껏 움직여보자. 파도는 잔잔해질 것이고 휩쓸리지 않을 것이다.  </div>
                 </div>
                 <div class="how">
                     <div>
                         <div class="how pc_only">
-                            <div class="howto sa sa-up ">사용 도구</div>
-                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터</div>
+                            <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
+                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터, 아두이노 센서(바람센서, 초음파센서)</div>
                         </div>
                         <div class="how">
-                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" 맘스터치 "</div>
+                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" 휩쓸리다 "</div>
                             <div class="howto_explain pc_only"> 
-                                <div class = "sa sa-left" data-sa-delay="300">집을 떠올려 보면 온통 추억이 가득하다.</div>
-                                <div class = "sa sa-left" data-sa-delay="400">어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. </div>
-                                <div class = "sa sa-left" data-sa-delay="500"> 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. </div>
-                                <div class = "sa sa-left" data-sa-delay="600">그렇지만 그 시간만큼 추억이 입</div>
+                                <div class = "sa sa-left" data-sa-delay="300">파도 속에 몸을 맡기면 원하지 않은 방향으로 휩쓸리곤 한다. </div>
+                                <div class = "sa sa-left" data-sa-delay="400">움직임은 파도의 세기에 따라 쉽게 다시 자리를 잡을 수도 혹은 버티는 것조차 힘겨울 때도 있다. </div>
+                                <div class = "sa sa-left" data-sa-delay="500">삶도 마찬가지다. 살아가면서 내가 원하는 방향으로 흘러갈 때도 있고 자신과 다른 의견에 휩쓸릴 때도 있다. </div>
+                                <div class = "sa sa-left" data-sa-delay="600">물론 다시금 자신의 방향으로 돌아올 수도 있지만 어쩌면 돌아오지 못해 자신의 정체성마저 흔들릴 수 있다. </div>
+                                <div class = "sa sa-left" data-sa-delay="700">작품 속 파도는 나의 정체성을 흔들 수 있는 다른 요소들을 의미한다. 관객이 움직일수록 파도는 느려지고 잠잠해진다. 하지만 움직이지 않으면 파도는 다시 거세지고 관객을 휩쓸고 지나간다.  </div>
+                                <div class = "sa sa-left" data-sa-delay="800">힘껏 움직여보자. 파도는 잔잔해질 것이고 휩쓸리지 않을 것이다.</div>
                             </div>
                         </div>
                             <div class="how" style="min-width:320px;width:100%;">
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/individual_how1.PNG"></figure>
-                                    <div class="sequence_ex sa sa-right pc_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/flow/wsy/wsy_flow_1.png"></figure>
+                                    <div class="sequence_ex sa sa-right pc_only">1. 관객이 입장한다</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/individual_how2.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/flow/wsy/wsy_flow_2.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 관객이 움직이면 파도가 느려지고 사운드가 작아진다</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/individual_how3.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/flow/wsy/wsy_flow_3.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 관객이 움직이지 않으면 다시 파도가 거세진다 </div>
                                 </div>
                             </div>
                     </div>
@@ -327,16 +308,16 @@
         <div style="overflow-x:auto">
             <div class = "how_mobile" style="min-width:320px;width:100%;">
                 <div>
-                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/mobile/individual_how1_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/flow/wsy/wsy_flow_1.png"></figure>
+                    <div class="sequence_ex sa sa-right mobile_only">1. 관객이 입장한다</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/mobile/individual_how2_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/flow/wsy/wsy_flow_2.png" ></figure>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 관객이 움직이면 파도가 느려지고 사운드가 작아진다</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/mobile/individual_how3_mobile.png"></figure>
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/flow/wsy/wsy_flow_3.png" ></figure>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 관객이 움직이지 않으면 다시 파도가 거세진다 </div>
                 </div>  
             </div> 
         </div>
@@ -353,6 +334,7 @@
             <div class="scroll-bar__divider"><a class="scroll-bar__divider__name" data-target="#section__end">End</a></div>
             <div class="scroll-bar__margin"></div>
         </div>
+        
 
 </body>
 
