--- a/data/pages/works_memory_individual1.html
+++ b/data/pages/works_memory_individual1.html
@@ -204,16 +204,16 @@
             <div class="scroll-section section-divider" id="section__indivisual">
                 <div class="hover01 column">
                     <div>
-                        <figure id="person" class="pc_only"><img src="../images/profile/김민송11.jpg" ></figure>
-                        <figure class="mobile_only"><img src="../images/individual/mobile/김민송_mobile.jpg" ></figure>
+                        <figure id="person" class="pc_only"><img src="../images/profile/34/김민송34.png" ></figure>
+                        <figure id = "person_mobile" class="mobile_only"><img src="../images/profile/1_1size/김민송.jpg" ></figure>
                     </div>
                 </div>
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 김민송 </div>
-                        <div id="person_name_eng"> PARK HEE JE </div>
+                        <div id="person_name_eng"> KIM SU BIN </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;koik105@naver.com </div>
+                    <div id="email"> Email&nbsp;&nbsp;&nbsp;sukong0507@gmail.com </div>
                 </div>
             </div>
         </div>
@@ -221,46 +221,30 @@
         <div class="scroll-section">
             <div class="work_information">
                 <div id="concept">CONCEPT</div>
-                <div id="work_name">멀티 페르소나</div>
+                <div id="work_name">미정이</div>
                 <div id="work_explain">
-                    집을 떠올려 보면 온통 추억이 가득하다. 어릴적 사진이 들어있는 액자.. 지금은 안쓰는 
-                    카세트.. 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. 그렇지만 그 시간
-                    만큼 추억이 입혀져 사람에게 특별한 의미를 가지게 된다. 하지만 추억의 물건은 현대의 
-                    것에 비하면 기능이 부족하여 굳이 쓸 필요가 없어졌다. 그렇더라도 우리는 버릴 수 없다.
-                    손이 닿는 순간 그때 그 시간으로 돌아가기 때문에.</div>
+                    우리의 기억은 시간이 지나면 왜곡되기 마련이다. 이전의 사건이나 경험은 기억의 형태로 바로 저장되지 않는다.
+                     시간이 흐르고 다시 상기하는 과정을 겪고서야 기억으로 자리를 잡게 된다. 
+                     시간과 기억은 서로 맞물린 관계이며 흘러가는 시간 속에서 기억은 다양한 외부간섭을 받는다.
+                      간섭을 받은 기억은 시간의 흐름 속에서 쉽게 왜곡되는 성질을 가진다. 
+                      여러 간섭으로인해서 쉽게 왜곡되는 기억을 관찰하고자한다.</div>
             </div>
         </div>
             <div class="scroll-section section-divider" id="section__poster">
                 <div class="dd">
                     <div class="video_name sa sa-up">CONCEPT POSTER</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" 맘스터치 "</div>
+                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" 歪曲(기억왜곡) "</div>
                     <div class="touch_information sa sa-down pc_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        <br><br><br><br><br><br>
+                    </div>
                    
                 </div>
                 <div>
-                    <figure class="individual_img sa sa-right pc_only" data-sa-delay="400"><img src="../images/individual/poster.png"></figure>
-                    <figure class="mobile_only sa sa-scaleUp img_mar" data-sa-delay="400"><img src="../images/individual/mobile/poster_mobile.png"></figure>
+                    <figure class="individual_img sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/kms_poster.png"></figure>
                 </div>
                 <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                    집을 떠올려 보면 온통
-                    추억이 가득하다. 어릴
-                    적 사진이 들어있는 액
-                    자.. 지금은 안쓰는 카세
-                    트.. 집에 있는 과거
-                    의 물건은 시간이 지남
-                    에 따라 닳고 낡아간
-                    다. 그렇지만 그 시간
-                    만큼 추억이 입</div>
+                        <br><br><br><br></div>
             </div>
 
 
@@ -275,46 +259,45 @@
                 <div class="inter">
                     <div class="inter_how sa sa-up"> INTERACTIVE ART</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 맘스터치 "</div>
-                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/individual_interaction.PNG" class="mobile__img"></figure>
+                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" REVERSE "</div>
+                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/view/kms_view_1.png" class="mobile__img"></figure>
                     <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        이전의 사건이나 경험은 기억의 형태로 바로 저장되지 않는다. 시간이 흐르고 다시 상기하는 과정을 겪고서야 기억으로 자리를 잡게 된다. 
+                        시간과 기억은 서로 맞물린 관계이며 흘러가는 시간 속에서 기억은 다양한 외부간섭을 받는다. 
+                        간섭을 받은 기억은 시간의 흐름 속에서 액체 상태로 쉽게 왜곡되는 성질을 가진다. 
+                        그렇게 왜곡된 기억은 그 상태로 굳어져 머릿속에 저장된다. 
+                        기억이 단단하게 굳어지는 이 과정에서 관람객들은 모래시계를 뒤집는 행위를 통해 시간의 흐름 속 기억에 간섭하게 된다. 
+                        간섭행위를 하게 된 관람객들은 기억의 형태가 액체처럼 유연히 왜곡되는 것을 작품을 통해 관찰할 수 있을 것이다.</div>
                 </div>
                 <div class="how">
                     <div>
                         <div class="how pc_only">
-                            <div class="howto sa sa-up ">사용 도구</div>
-                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터</div>
+                            <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
+                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터, 아두이노 센서(바람센서, 초음파센서)</div>
                         </div>
                         <div class="how">
-                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" 맘스터치 "</div>
+                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" REVERSE "</div>
                             <div class="howto_explain pc_only"> 
-                                <div class = "sa sa-left" data-sa-delay="300">집을 떠올려 보면 온통 추억이 가득하다.</div>
-                                <div class = "sa sa-left" data-sa-delay="400">어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. </div>
-                                <div class = "sa sa-left" data-sa-delay="500"> 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. </div>
-                                <div class = "sa sa-left" data-sa-delay="600">그렇지만 그 시간만큼 추억이 입</div>
+                                <div class = "sa sa-left" data-sa-delay="300">이전의 사건이나 경험은 기억의 형태로 바로 저장되지 않는다. 시간이 흐르고 다시 상기하는 과정을 겪고서야 기억으로 자리를 잡게 된다. </div>
+                                <div class = "sa sa-left" data-sa-delay="400">시간과 기억은 서로 맞물린 관계이며 흘러가는 시간 속에서 기억은 다양한 외부간섭을 받는다. </div>
+                                <div class = "sa sa-left" data-sa-delay="500">간섭을 받은 기억은 시간의 흐름 속에서 액체 상태로 쉽게 왜곡되는 성질을 가진다. </div>
+                                <div class = "sa sa-left" data-sa-delay="600">그렇게 왜곡된 기억은 그 상태로 굳어져 머릿속에 저장된다. </div>
+                                <div class = "sa sa-left" data-sa-delay="700">기억이 단단하게 굳어지는 이 과정에서 관람객들은 모래시계를 뒤집는 행위를 통해 시간의 흐름 속 기억에 간섭하게 된다. </div>
+                                <div class = "sa sa-left" data-sa-delay="800">간섭행위를 하게 된 관람객들은 기억의 형태가 액체처럼 유연히 왜곡되는 것을 작품을 통해 관찰할 수 있을 것이다.</div>
                             </div>
                         </div>
                             <div class="how" style="min-width:320px;width:100%;">
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/individual_how1.PNG"></figure>
-                                    <div class="sequence_ex sa sa-right pc_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/flow/kms/kms_flow_1.png"></figure>
+                                    <div class="sequence_ex sa sa-right pc_only">1. 다양한 시계들이 있으며, 각각 시간이 흘러가고 있는 영상이 계속 재생된다.</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/individual_how2.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/flow/kms/kms_flow_2.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 관람객은 영상을 보다가 모래시계를 한 번 뒤집는다.</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/individual_how3.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/flow/kms/kms_flow_3.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 흘러가고 있는 시간들이 액체처럼 유연하게 왜곡되는 영상으로 전환된다. 여기서 모래시계를 한 번 더 뒤집으면 다시 처음 화면으로 돌아간다.  </div>
                                 </div>
                             </div>
                     </div>
@@ -327,16 +310,16 @@
         <div style="overflow-x:auto">
             <div class = "how_mobile" style="min-width:320px;width:100%;">
                 <div>
-                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/mobile/individual_how1_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/flow/kms/kms_flow_1.png"></figure>
+                    <div class="sequence_ex sa sa-right mobile_only">1. 다양한 시계들이 있으며, 각각 시간이 흘러가고 있는 영상이 계속 재생된다.</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/mobile/individual_how2_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/flow/kms/kms_flow_2.png" ></figure>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 관람객은 영상을 보다가 모래시계를 한 번 뒤집는다.</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/mobile/individual_how3_mobile.png"></figure>
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/flow/kms/kms_flow_3.png" ></figure>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 흘러가고 있는 시간들이 액체처럼 유연하게 왜곡되는 영상으로 전환된다. 여기서 모래시계를 한 번 더 뒤집으면 다시 처음 화면으로 돌아간다.  </div>
                 </div>  
             </div> 
         </div>
@@ -353,6 +336,7 @@
             <div class="scroll-bar__divider"><a class="scroll-bar__divider__name" data-target="#section__end">End</a></div>
             <div class="scroll-bar__margin"></div>
         </div>
+
 
 </body>
 
