--- a/data/pages/works_memory_individual4.html
+++ b/data/pages/works_memory_individual4.html
@@ -204,16 +204,16 @@
             <div class="scroll-section section-divider" id="section__indivisual">
                 <div class="hover01 column">
                     <div>
-                        <figure id="person" class="pc_only"><img src="../images/profile/이우진11.jpg" ></figure>
-                        <figure class="mobile_only"><img src="../images/individual/mobile/이우진_mobile.jpg" ></figure>
+                        <figure id="person" class="pc_only"><img src="../images/profile/34/이우진34.png" ></figure>
+                        <figure id = "person_mobile" class="mobile_only"><img src="../images/profile/1_1size/이우진.jpg" ></figure>
                     </div>
                 </div>
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 이우진 </div>
-                        <div id="person_name_eng"> PARK HEE JE </div>
+                        <div id="person_name_eng"> KIM SU BIN </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;koik105@naver.com </div>
+                    <div id="email"> Email&nbsp;&nbsp;&nbsp;sukong0507@gmail.com </div>
                 </div>
             </div>
         </div>
@@ -221,46 +221,29 @@
         <div class="scroll-section">
             <div class="work_information">
                 <div id="concept">CONCEPT</div>
-                <div id="work_name">멀티 페르소나</div>
+                <div id="work_name">미정이</div>
                 <div id="work_explain">
-                    집을 떠올려 보면 온통 추억이 가득하다. 어릴적 사진이 들어있는 액자.. 지금은 안쓰는 
-                    카세트.. 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. 그렇지만 그 시간
-                    만큼 추억이 입혀져 사람에게 특별한 의미를 가지게 된다. 하지만 추억의 물건은 현대의 
-                    것에 비하면 기능이 부족하여 굳이 쓸 필요가 없어졌다. 그렇더라도 우리는 버릴 수 없다.
-                    손이 닿는 순간 그때 그 시간으로 돌아가기 때문에.</div>
+                    단기기억을 장기기억으로 바꾸지 못하고 주기적으로 기억을 잃어버리는 현상, "선행성 기억상실증[Anterograde amnesia]". 
+                    새로운 정보나 경험을 완전히 받아들이지 못하고 돌아서는 순간 그 기억들이 사라지게 된다. 
+                    계속해서 자신이 무엇을 하고 있었는지, 무엇을 하려고 했는지, 자신이 처한 상환 판단조차 할 수 없고 
+                    머릿속은 백지상태[白紙狀態]로 돌아간다. 앞으로 나아가지 못하고 현재에 머무르며 평생 "제자리걸음”을 하는 것이다.  </div>
             </div>
         </div>
             <div class="scroll-section section-divider" id="section__poster">
                 <div class="dd">
                     <div class="video_name sa sa-up">CONCEPT POSTER</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" 맘스터치 "</div>
+                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" Retrun to <br>Blank "</div>
                     <div class="touch_information sa sa-down pc_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        <br><br><br><br><br><br>
+                    </div>
                    
                 </div>
                 <div>
-                    <figure class="individual_img sa sa-right pc_only" data-sa-delay="400"><img src="../images/individual/poster.png"></figure>
-                    <figure class="mobile_only sa sa-scaleUp img_mar" data-sa-delay="400"><img src="../images/individual/mobile/poster_mobile.png"></figure>
+                    <figure class="individual_img sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/이우진포스터웹용.png"></figure>
                 </div>
                 <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                    집을 떠올려 보면 온통
-                    추억이 가득하다. 어릴
-                    적 사진이 들어있는 액
-                    자.. 지금은 안쓰는 카세
-                    트.. 집에 있는 과거
-                    의 물건은 시간이 지남
-                    에 따라 닳고 낡아간
-                    다. 그렇지만 그 시간
-                    만큼 추억이 입</div>
+                        <br><br><br><br></div>
             </div>
 
 
@@ -271,50 +254,45 @@
 
             
 
-            <div class="scroll-section" >
+            <div class="scroll-section">
                 <div class="inter">
                     <div class="inter_how sa sa-up"> INTERACTIVE ART</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 맘스터치 "</div>
-                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/individual_interaction.PNG" class="mobile__img"></figure>
+                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 제자리걸음(Retrun to Blank) "</div>
+                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/view/이우진-조감도.png" class="mobile__img"></figure>
                     <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        자유롭게 그림을 그릴 수 있는 스크린이 있다. 
+                        붓을 들고 그림을 그리는 것에만 온전히 집중하면 그림을 계속해서 그려나갈 수 있고 물감의 잔상이 오랫동안 남아있을 것이다. 
+                        하지만 스크린에서 손을 떼는 순간 그려지던 그림의 잔상들은 모두 사라지고 스크린 속에는 아무것도 남아있지 않을 것이다. 
+                        인터랙티브 아트를 통해 계속해서 백지상태로 돌아가며 앞으로 나아가지 못하고 제자리걸음을 하는 선행성 기억상실증을 표현하였다. </div>
                 </div>
                 <div class="how">
                     <div>
                         <div class="how pc_only">
-                            <div class="howto sa sa-up ">사용 도구</div>
-                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터</div>
+                            <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
+                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터, 아두이노 센서(바람센서, 초음파센서)</div>
                         </div>
                         <div class="how">
-                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" 맘스터치 "</div>
+                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" 제자리걸음(Retrun to Blank) "</div>
                             <div class="howto_explain pc_only"> 
-                                <div class = "sa sa-left" data-sa-delay="300">집을 떠올려 보면 온통 추억이 가득하다.</div>
-                                <div class = "sa sa-left" data-sa-delay="400">어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. </div>
-                                <div class = "sa sa-left" data-sa-delay="500"> 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. </div>
-                                <div class = "sa sa-left" data-sa-delay="600">그렇지만 그 시간만큼 추억이 입</div>
+                                <div class = "sa sa-left" data-sa-delay="300">자유롭게 그림을 그릴 수 있는 스크린이 있다. </div>
+                                <div class = "sa sa-left" data-sa-delay="400">붓을 들고 그림을 그리는 것에만 온전히 집중하면 그림을 계속해서 그려나갈 수 있고 물감의 잔상이 오랫동안 남아있을 것이다.  </div>
+                                <div class = "sa sa-left" data-sa-delay="500">하지만 스크린에서 손을 떼는 순간 그려지던 그림의 잔상들은 모두 사라지고 스크린 속에는 아무것도 남아있지 않을 것이다. </div>
+                                <div class = "sa sa-left" data-sa-delay="600">인터랙티브 아트를 통해 계속해서 백지상태로 돌아가며 앞으로 나아가지 못하고 제자리걸음을 하는 선행성 기억상실증을 표현하였다. </div>
                             </div>
                         </div>
                             <div class="how" style="min-width:320px;width:100%;">
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/individual_how1.PNG"></figure>
-                                    <div class="sequence_ex sa sa-right pc_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/flow/이우진/이우진-흐름도1.png"></figure>
+                                    <div class="sequence_ex sa sa-right pc_only">1. 사용자가 붓으로 천스크린을 누르는 동안 그림이 그려진다.</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/individual_how2.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/flow/이우진/이우진-흐름도2.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 스크린에서 붓을 떼는 순간 그리던 그림이 사라진다. </div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/individual_how3.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/flow/이우진/이우진-흐름도3.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">3. 백지상태로 돌아간다. </div>
                                 </div>
                             </div>
                     </div>
@@ -327,17 +305,17 @@
         <div style="overflow-x:auto">
             <div class = "how_mobile" style="min-width:320px;width:100%;">
                 <div>
-                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/mobile/individual_how1_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/flow/이우진/이우진-흐름도1.png"></figure>
+                    <div class="sequence_ex sa sa-right mobile_only">1. 사용자가 붓으로 천스크린을 누르는 동안 그림이 그려진다.</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/mobile/individual_how2_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/flow/이우진/이우진-흐름도2.png" ></figure>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 스크린에서 붓을 떼는 순간 그리던 그림이 사라진다. </div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/mobile/individual_how3_mobile.png"></figure>
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
-                </div>  
+                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/flow/이우진/이우진-흐름도3.png" ></figure>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">3. 백지상태로 돌아간다. </div>
+                </div>
             </div> 
         </div>
         <div class="scroll-bar">
