--- a/data/pages/works_me_individual2.html
+++ b/data/pages/works_me_individual2.html
@@ -7,11 +7,8 @@
     <meta name="viewport"content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>PNU DT 2021</title>
     <link rel="stylesheet" type="text/css" href="../style/style.css">
-<<<<<<< HEAD
     <link rel="stylesheet" type="text/css" href="../style/individual.css">    
-=======
     <link rel="stylesheet" type="text/css" href="../style/individual.css">
->>>>>>> f41cc5b29af1372797a24f4b52bb9d6dbc0f9b60
     <link rel="stylesheet" type="text/css" href="../style/scrollbar.css">
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
 
@@ -245,8 +242,7 @@
                    
                 </div>
                 <div>
-                    <figure class="individual_img sa sa-right pc_only" data-sa-delay="400"><img src="../images/individual/poster/ksb_poster.png"></figure>
-                    <figure class="mobile_only sa sa-scaleUp img_mar" data-sa-delay="400"><img src="../images/individual/mobile/poster_mobile.png"></figure>
+                    <figure class="individual_img sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/ksb_poster.png"></figure>
                 </div>
                 <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
                     <br><br><br><br></div>
@@ -264,18 +260,13 @@
                 <div class="inter">
                     <div class="inter_how sa sa-up"> INTERACTIVE ART</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 맘스터치 "</div>
+                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" Personal Space "</div>
                     <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/view/ksb_view_1.png" class="mobile__img"></figure>
                     <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        타인으로부터 떨어지고 싶은 느낌이 드는 영역(Personal space)은 흔히 '거품'으로 비유된다. 
+                        거품의 크기는 사람마다, 상황마다, 문화마다 다르기 때문에 자신만의 거리감으로 상대방에게 다가가려고 하면 상대방이 불쾌감을 느낄 수 있다.
+                        작품 속 각자의 공간을 둘러싼 서로 다른 크기의 버블은 공간을 지키기 위해 서로를 밀어낼 것이다. 밀어내는 타인의 버블에 반복적으로 
+                        다가간다면 늘어나는 불쾌감으로 인해 터져버릴 수 있으니 주의하자.</div>
                 </div>
                 <div class="how">
                     <div>
@@ -316,16 +307,16 @@
         <div style="overflow-x:auto">
             <div class = "how_mobile" style="min-width:320px;width:100%;">
                 <div>
-                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/mobile/individual_how1_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/flow/ksb/ksb_flow_1.png"></figure>  
+                    <div class="sequence_ex sa sa-right mobile_only">1. 화면에는 많은 버블들이 움직이고 있고, 유저가 선반 앞으로 다가간다.</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/mobile/individual_how2_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/flow/ksb/ksb_flow_2.png"></figure>  
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 유저의 거리가 가까워지면 화면이 전환된다. 유저는 바람 센서에 바람을 불어 버블의 크기를 정한다.</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/mobile/individual_how3_mobile.png"></figure>
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/flow/ksb/ksb_flow_3.png"></figure>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 유저의 버블이 많은 버블들과 함께 섞이면서 유저는 손의 움직임을 통해 버블을 조종할 수 있다. </div>
                 </div>  
             </div> 
         </div>
