--- a/data/pages/works_memo_individual1.html
+++ b/data/pages/works_memo_individual1.html
@@ -204,16 +204,16 @@
             <div class="scroll-section section-divider" id="section__indivisual">
                 <div class="hover01 column">
                     <div>
-                        <figure id="person" class="pc_only"><img src="../images/profile/권성화11.jpg" ></figure>
-                        <figure class="mobile_only"><img src="../images/individual/mobile/권성화_mobile.jpg" ></figure>
+                        <figure id="person" class="pc_only"><img src="../images/profile/34/권성화34.png" ></figure>
+                        <figure id = "person_mobile" class="mobile_only"><img src="../images/profile/1_1size/권성화.jpg" ></figure>
                     </div>
                 </div>
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 권성화 </div>
-                        <div id="person_name_eng"> PARK HEE JE </div>
+                        <div id="person_name_eng"> KIM SU BIN </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;koik105@naver.com </div>
+                    <div id="email"> Email&nbsp;&nbsp;&nbsp;sukong0507@gmail.com </div>
                 </div>
             </div>
         </div>
@@ -221,46 +221,31 @@
         <div class="scroll-section">
             <div class="work_information">
                 <div id="concept">CONCEPT</div>
-                <div id="work_name">멀티 페르소나</div>
+                <div id="work_name">미정이</div>
                 <div id="work_explain">
-                    집을 떠올려 보면 온통 추억이 가득하다. 어릴적 사진이 들어있는 액자.. 지금은 안쓰는 
-                    카세트.. 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. 그렇지만 그 시간
-                    만큼 추억이 입혀져 사람에게 특별한 의미를 가지게 된다. 하지만 추억의 물건은 현대의 
-                    것에 비하면 기능이 부족하여 굳이 쓸 필요가 없어졌다. 그렇더라도 우리는 버릴 수 없다.
-                    손이 닿는 순간 그때 그 시간으로 돌아가기 때문에.</div>
+                    아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 
+                    아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 </div>
             </div>
         </div>
             <div class="scroll-section section-divider" id="section__poster">
                 <div class="dd">
                     <div class="video_name sa sa-up">CONCEPT POSTER</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" 맘스터치 "</div>
-                    <div class="touch_information sa sa-down pc_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                    <div class="toomuch_mom_touch sa sa-scaleUp" data-sa-delay="100">" 들여다보기 "</div>
+                    <div class="toomuch_information sa sa-down pc_only" data-sa-delay="200">
+                        [각자의 길] 은 끝이 보이지 않는 미로 속에서 자신의 길을 걸어가고 있는 사람들에 대한 이야기이다. 각자 어떤 길을, 어떻게 걸어가는지 보이진 않지만 GPS 이정표가 그들이 현재 위치를 말해준다.
+                        우리가 살아가는 삶도 그렇다. 마치 미로 같아 한 치 앞도 모를 때가 많다. 이런 상황에서 남들이 어떻게 살아가고 있는지는 관심 가지지 않는다. 바로 내 옆에 위치하더라도 말이다.
+                        오늘도 우리들은 자신의 삶을 살아간다. 목적지를 향해서, 각자의 길을 걷는다.
+                    </div>
                    
                 </div>
                 <div>
-                    <figure class="individual_img sa sa-right pc_only" data-sa-delay="400"><img src="../images/individual/poster.png"></figure>
-                    <figure class="mobile_only sa sa-scaleUp img_mar" data-sa-delay="400"><img src="../images/individual/mobile/poster_mobile.png"></figure>
+                    <figure class="individual_img sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/ksh_poster.jpg"></figure>
                 </div>
                 <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                    집을 떠올려 보면 온통
-                    추억이 가득하다. 어릴
-                    적 사진이 들어있는 액
-                    자.. 지금은 안쓰는 카세
-                    트.. 집에 있는 과거
-                    의 물건은 시간이 지남
-                    에 따라 닳고 낡아간
-                    다. 그렇지만 그 시간
-                    만큼 추억이 입</div>
+                    [각자의 길] 은 끝이 보이지 않는 미로 속에서 자신의 길을 걸어가고 있는 사람들에 대한 이야기이다. 각자 어떤 길을, 어떻게 걸어가는지 보이진 않지만 GPS 이정표가 그들이 현재 위치를 말해준다.
+                        우리가 살아가는 삶도 그렇다. 마치 미로 같아 한 치 앞도 모를 때가 많다. 이런 상황에서 남들이 어떻게 살아가고 있는지는 관심 가지지 않는다. 바로 내 옆에 위치하더라도 말이다.
+                        오늘도 우리들은 자신의 삶을 살아간다. 목적지를 향해서, 각자의 길을 걷는다.
             </div>
 
 
@@ -275,46 +260,43 @@
                 <div class="inter">
                     <div class="inter_how sa sa-up"> INTERACTIVE ART</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 맘스터치 "</div>
-                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/individual_interaction.PNG" class="mobile__img"></figure>
+                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" ME로 찾기 "</div>
+                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/view/ksh_view.png" class="mobile__img"></figure>
                     <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        [ME로 찾기]는 관객이 남들과는 다른 자신(ME)만의 길(路)을 찾는 작품이다. 길을 찾는 과정은 찬란하고 화려하게 연출된다. 
+                        그리고 그 배경에는 회색빛의 또 다른 길이 보인다. 이는 당신이 오기 전, 앞사람이 남겼던 흔적이자 지표이다. 
+                        당신이 미로의 끝에 도달하면서 걸었던 길 또한 흔적으로 남아서 뒷사람의 지표가 될 것이고, 뒷사람은 앞사람의 흔적을 참고해 자신만의 걸음으로 나아갈 것이다.
+                        이렇게 한 사람의 길 위에 또 다른 길이 그려진다. 이 과정은 몇 번이고 반복되어 어느새 당신이 남겼던 것들은 보이지 않게 될 것이다. 
+                        그러나 그 길이 영원히 없어지는 것은 아니다. 눈에 보이지만 않을 뿐, 관객이 걸었던 모든 길은 이 미로 속에 영원히 흔적으로 남을 것이다.</div>
                 </div>
                 <div class="how">
                     <div>
                         <div class="how pc_only">
-                            <div class="howto sa sa-up ">사용 도구</div>
-                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터</div>
+                            <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
+                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터, 아두이노 센서(바람센서, 초음파센서)</div>
                         </div>
                         <div class="how">
-                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" 맘스터치 "</div>
+                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" ME로 찾기 "</div>
                             <div class="howto_explain pc_only"> 
-                                <div class = "sa sa-left" data-sa-delay="300">집을 떠올려 보면 온통 추억이 가득하다.</div>
-                                <div class = "sa sa-left" data-sa-delay="400">어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. </div>
-                                <div class = "sa sa-left" data-sa-delay="500"> 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. </div>
-                                <div class = "sa sa-left" data-sa-delay="600">그렇지만 그 시간만큼 추억이 입</div>
+                                <div class = "sa sa-left" data-sa-delay="300">[ME로 찾기]는 관객이 남들과는 다른 자신(ME)만의 길(路)을 찾는 작품이다. 길을 찾는 과정은 찬란하고 화려하게 연출된다.</div>
+                                <div class = "sa sa-left" data-sa-delay="400">그리고 그 배경에는 회색빛의 또 다른 길이 보인다. 이는 당신이 오기 전, 앞사람이 남겼던 흔적이자 지표이다.   </div>
+                                <div class = "sa sa-left" data-sa-delay="500"> 당신이 미로의 끝에 도달하면서 걸었던 길 또한 흔적으로 남아서 뒷사람의 지표가 될 것이고, 뒷사람은 앞사람의 흔적을 참고해 자신만의 걸음으로 나아갈 것이다.</div>
+                                <div class = "sa sa-left" data-sa-delay="600">이렇게 한 사람의 길 위에 또 다른 길이 그려진다. 이 과정은 몇 번이고 반복되어 어느새 당신이 남겼던 것들은 보이지 않게 될 것이다. </div>
+                                <div class = "sa sa-left" data-sa-delay="700">그러나 그 길이 영원히 없어지는 것은 아니다. 눈에 보이지만 않을 뿐, 관객이 걸었던 모든 길은 이 미로 속에 영원히 흔적으로 남을 것이다. </div>
                             </div>
                         </div>
                             <div class="how" style="min-width:320px;width:100%;">
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/individual_how1.PNG"></figure>
-                                    <div class="sequence_ex sa sa-right pc_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/flow/ksh/ksh_flow_1.png"></figure>
+                                    <div class="sequence_ex sa sa-right pc_only">1. 기본 화면 출력.</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/individual_how2.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/flow/ksh/ksh_flow_2.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 관객이 발판에 올라서면 작품이 시작되고 앞서 다녀간 관객들의 길을 배경에 출력.</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/individual_how3.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/flow/ksh/ksh_flow_3.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 발판의 방향에 따라 길이 그려지고 화면의 끝에 도달하면 1.로 되돌아 감. </div>
                                 </div>
                             </div>
                     </div>
@@ -327,16 +309,16 @@
         <div style="overflow-x:auto">
             <div class = "how_mobile" style="min-width:320px;width:100%;">
                 <div>
-                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/mobile/individual_how1_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/flow/ksh/ksh_flow_1.png"></figure>  
+                    <div class="sequence_ex sa sa-right mobile_only">1. 기본 화면 출력.</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/mobile/individual_how2_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/flow/ksh/ksh_flow_2.png"></figure>  
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 관객이 발판에 올라서면 작품이 시작되고 앞서 다녀간 관객들의 길을 배경에 출력.</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/mobile/individual_how3_mobile.png"></figure>
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/flow/ksh/ksh_flow_3.png"></figure>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 발판의 방향에 따라 길이 그려지고 화면의 끝에 도달하면 1.로 되돌아 감. </div>
                 </div>  
             </div> 
         </div>
@@ -353,7 +335,7 @@
             <div class="scroll-bar__divider"><a class="scroll-bar__divider__name" data-target="#section__end">End</a></div>
             <div class="scroll-bar__margin"></div>
         </div>
-
+        
 </body>
 
 <script src="../js/scroll.js"></script>
