--- a/data/pages/works_memo_individual4.html
+++ b/data/pages/works_memo_individual4.html
@@ -204,16 +204,16 @@
             <div class="scroll-section section-divider" id="section__indivisual">
                 <div class="hover01 column">
                     <div>
-                        <figure id="person" class="pc_only"><img src="../images/profile/신유진11.jpg" ></figure>
-                        <figure class="mobile_only"><img src="../images/individual/mobile/신유진_mobile.jpg" ></figure>
+                        <figure id="person" class="pc_only"><img src="../images/profile/34/신유진34.png" ></figure>
+                        <figure id = "person_mobile" class="mobile_only"><img src="../images/profile/1_1size/신유진.jpg" ></figure>
                     </div>
                 </div>
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 신유진 </div>
-                        <div id="person_name_eng"> PARK HEE JE </div>
+                        <div id="person_name_eng"> KIM SU BIN </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;koik105@naver.com </div>
+                    <div id="email"> Email&nbsp;&nbsp;&nbsp;sukong0507@gmail.com </div>
                 </div>
             </div>
         </div>
@@ -221,46 +221,44 @@
         <div class="scroll-section">
             <div class="work_information">
                 <div id="concept">CONCEPT</div>
-                <div id="work_name">멀티 페르소나</div>
+                <div id="work_name">미정이</div>
                 <div id="work_explain">
-                    집을 떠올려 보면 온통 추억이 가득하다. 어릴적 사진이 들어있는 액자.. 지금은 안쓰는 
-                    카세트.. 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. 그렇지만 그 시간
-                    만큼 추억이 입혀져 사람에게 특별한 의미를 가지게 된다. 하지만 추억의 물건은 현대의 
-                    것에 비하면 기능이 부족하여 굳이 쓸 필요가 없어졌다. 그렇더라도 우리는 버릴 수 없다.
-                    손이 닿는 순간 그때 그 시간으로 돌아가기 때문에.</div>
+                    [무드셀라증후군]이란, 추억은 항상 아름답다고 하며 좋았던 기억만 남겨두려는 심리를 말한다.
+                    이 증후군을 앓는 사람은 과거의 일을 회상할 때 나쁜 기억은 빨리 지워버리고 좋은 기억만을 남기려는 기억 왜곡 현상을 보인다.
+                    어쩌면 이 증상은 바쁘고 힘든 나날을 보내는 우리에게 꼭 필요한 병 일지도 모른다. 
+                    안 좋은 기억은 얼른 보내버리고 행복했던 때만 되새김질하여 감정적으로 안정적이었던 추억에 젖어보자.
+                    그 당시 놓쳤던 감정과 기억들에 대해 새로움을 제공해 줄 것이다.</div>
             </div>
         </div>
             <div class="scroll-section section-divider" id="section__poster">
                 <div class="dd">
                     <div class="video_name sa sa-up">CONCEPT POSTER</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" 맘스터치 "</div>
-                    <div class="touch_information sa sa-down pc_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                    <div class="toomuch_mom_touch sa sa-scaleUp" data-sa-delay="100">" 두가지 관점 "</div>
+                    <div class="toomuch_information sa sa-down pc_only" data-sa-delay="200">
+                        자유억압의 상징인 부르카.
+                        그리고 메이크업을 진하게 한 부르카 안의 여성.
+                        "어떻게 여자가 메이크업을 저리 진하게 할 수 있지?"
+                        "어떻게 멋진 메이크업위로 부르카를 쓸 수 있지?"
+                        고작 한장의 사진에 두가지 관점이 존재한다.
+                        삶을 살아가는데에도 같다.
+                        나 자신만의 시선으로 모든걸 해석한다.
+                        당신은 지금 어떤 관점으로 바라보고있는가?
+                    </div>
                    
                 </div>
                 <div>
-                    <figure class="individual_img sa sa-right pc_only" data-sa-delay="400"><img src="../images/individual/poster.png"></figure>
-                    <figure class="mobile_only sa sa-scaleUp img_mar" data-sa-delay="400"><img src="../images/individual/mobile/poster_mobile.png"></figure>
+                    <figure class="individual_img sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/syj_poster.png"></figure>
                 </div>
                 <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                    집을 떠올려 보면 온통
-                    추억이 가득하다. 어릴
-                    적 사진이 들어있는 액
-                    자.. 지금은 안쓰는 카세
-                    트.. 집에 있는 과거
-                    의 물건은 시간이 지남
-                    에 따라 닳고 낡아간
-                    다. 그렇지만 그 시간
-                    만큼 추억이 입</div>
+                    자유억압의 상징인 부르카.
+                        그리고 메이크업을 진하게 한 부르카 안의 여성.
+                        "어떻게 여자가 메이크업을 저리 진하게 할 수 있지?"
+                        "어떻게 멋진 메이크업위로 부르카를 쓸 수 있지?"
+                        고작 한장의 사진에 두가지 관점이 존재한다.
+                        삶을 살아가는데에도 같다.
+                        나 자신만의 시선으로 모든걸 해석한다.
+                        당신은 지금 어떤 관점으로 바라보고있는가?</div>
             </div>
 
 
@@ -275,46 +273,45 @@
                 <div class="inter">
                     <div class="inter_how sa sa-up"> INTERACTIVE ART</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 맘스터치 "</div>
-                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/individual_interaction.PNG" class="mobile__img"></figure>
+                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 무드셀라 증후군 "</div>
+                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/view/syj_view.png" class="mobile__img"></figure>
                     <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        누구나 좋았던 기억은 되새기고 싶어하고 힘든기억은 어서 지나가길 원한다.
+                        나의 추억들이 앨범속 정적으로 남아있다. 앨범을 넘김으로서 생생한 영상이 출력된다.
+                        이 인터렉션은 행복한 기억을 넘길때면 다양한 색상으로 나타나며 중간중간 슬로우모션과 더불어 되감아진다.
+                        반대로 나쁜 기억을 넘길때면 무채색의 흑백화면이 나타나며 중간중간 빨라지는 속도로 얼른 지나가버린다.
+                        만약 그 기억속에서 멈춰서고싶다면 비치된 책갈피를 꽂아보자. 즉시 영상은 멈춰질 것이다.
+                        희미해지는 기억은 뒤로하고 내가 간직하고픈 기억만 추억으로 남겨두면 된다.</div>
                 </div>
                 <div class="how">
                     <div>
                         <div class="how pc_only">
-                            <div class="howto sa sa-up ">사용 도구</div>
-                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터</div>
+                            <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
+                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터, 아두이노 센서(바람센서, 초음파센서)</div>
                         </div>
                         <div class="how">
-                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" 맘스터치 "</div>
+                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" 무드셀라 증후군 "</div>
                             <div class="howto_explain pc_only"> 
-                                <div class = "sa sa-left" data-sa-delay="300">집을 떠올려 보면 온통 추억이 가득하다.</div>
-                                <div class = "sa sa-left" data-sa-delay="400">어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. </div>
-                                <div class = "sa sa-left" data-sa-delay="500"> 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. </div>
-                                <div class = "sa sa-left" data-sa-delay="600">그렇지만 그 시간만큼 추억이 입</div>
+                                <div class = "sa sa-left" data-sa-delay="300">누구나 좋았던 기억은 되새기고 싶어하고 힘든기억은 어서 지나가길 원한다. </div>
+                                <div class = "sa sa-left" data-sa-delay="400">나의 추억들이 앨범속 정적으로 남아있다. 앨범을 넘김으로서 생생한 영상이 출력된다. </div>
+                                <div class = "sa sa-left" data-sa-delay="500">이 인터렉션은 행복한 기억을 넘길때면 다양한 색상으로 나타나며 중간중간 슬로우모션과 더불어 되감아진다.</div>
+                                <div class = "sa sa-left" data-sa-delay="600">반대로 나쁜 기억을 넘길때면 무채색의 흑백화면이 나타나며 중간중간 빨라지는 속도로 얼른 지나가버린다.</div>
+                                <div class = "sa sa-left" data-sa-delay="700">만약 그 기억속에서 멈춰서고싶다면 비치된 책갈피를 꽂아보자. 즉시 영상은 멈춰질 것이다.</div>
+                                <div class = "sa sa-left" data-sa-delay="800">희미해지는 기억은 뒤로하고 내가 간직하고픈 기억만 추억으로 남겨두면 된다.</div>
                             </div>
                         </div>
                             <div class="how" style="min-width:320px;width:100%;">
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/individual_how1.PNG"></figure>
-                                    <div class="sequence_ex sa sa-right pc_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/flow/syj/syj_flow_1.png"></figure>
+                                    <div class="sequence_ex sa sa-right pc_only">1. 비치된 앨범을 넘긴다.</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/individual_how2.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/flow/syj/syj_flow_2.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 앨범을 한 장씩 넘길 때마다 영상이 하나씩 출력된다. (이전 페이지로 돌아갈 수 X)</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/individual_how3.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/flow/syj/syj_flow_3.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 준비된 영상이 끝나면 약 15초 후 제일 처음으로 되돌아간다. </div>
                                 </div>
                             </div>
                     </div>
@@ -327,16 +324,16 @@
         <div style="overflow-x:auto">
             <div class = "how_mobile" style="min-width:320px;width:100%;">
                 <div>
-                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/mobile/individual_how1_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/flow/syj/syj_flow_1.png"></figure>
+                    <div class="sequence_ex sa sa-right mobile_only">1. 비치된 앨범을 넘긴다.</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/mobile/individual_how2_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/flow/syj/syj_flow_2.png" ></figure>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 앨범을 한 장씩 넘길 때마다 영상이 하나씩 출력된다. (이전 페이지로 돌아갈 수 X)</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/mobile/individual_how3_mobile.png"></figure>
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/flow/syj/syj_flow_3.png" ></figure>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 준비된 영상이 끝나면 약 15초 후 제일 처음으로 되돌아간다. </div>
                 </div>  
             </div> 
         </div>
@@ -353,6 +350,7 @@
             <div class="scroll-bar__divider"><a class="scroll-bar__divider__name" data-target="#section__end">End</a></div>
             <div class="scroll-bar__margin"></div>
         </div>
+
 
 </body>
 
