--- a/data/pages/works_memory_individual3.html
+++ b/data/pages/works_memory_individual3.html
@@ -204,16 +204,16 @@
             <div class="scroll-section section-divider" id="section__indivisual">
                 <div class="hover01 column">
                     <div>
-                        <figure id="person" class="pc_only"><img src="../images/profile/서혜인11.jpg" ></figure>
-                        <figure class="mobile_only"><img src="../images/individual/mobile/서혜인_mobile.jpg" ></figure>
+                        <figure id="person" class="pc_only"><img src="../images/profile/34/서혜인34.png" ></figure>
+                        <figure id = "person_mobile" class="mobile_only"><img src="../images/profile/1_1size/서혜인.jpg" ></figure>
                     </div>
                 </div>
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 서혜인 </div>
-                        <div id="person_name_eng"> PARK HEE JE </div>
+                        <div id="person_name_eng"> KIM SU BIN </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;koik105@naver.com </div>
+                    <div id="email"> Email&nbsp;&nbsp;&nbsp;sukong0507@gmail.com </div>
                 </div>
             </div>
         </div>
@@ -221,46 +221,30 @@
         <div class="scroll-section">
             <div class="work_information">
                 <div id="concept">CONCEPT</div>
-                <div id="work_name">멀티 페르소나</div>
+                <div id="work_name">방향을 잃다.</div>
                 <div id="work_explain">
-                    집을 떠올려 보면 온통 추억이 가득하다. 어릴적 사진이 들어있는 액자.. 지금은 안쓰는 
-                    카세트.. 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. 그렇지만 그 시간
-                    만큼 추억이 입혀져 사람에게 특별한 의미를 가지게 된다. 하지만 추억의 물건은 현대의 
-                    것에 비하면 기능이 부족하여 굳이 쓸 필요가 없어졌다. 그렇더라도 우리는 버릴 수 없다.
-                    손이 닿는 순간 그때 그 시간으로 돌아가기 때문에.</div>
+                    방향에겐 상대가 있다. 이의 시선으로 상대는 대상이 되고, 향하는 배경에 대해 설명 가능하다.
+                    방향 소실에 대한 책임은 기억에게 있음을 전한다. 
+                    움직임은 방향의 시선 과는 달리 정적이며 이것이 방향 소실에 대한 이유이다. 
+                    이렇듯 기억은 행동이 가지는 의미를 뜻하고 
+                    이에 더해 의미가 결합된 것이 방향성이다.  </div>
             </div>
         </div>
             <div class="scroll-section section-divider" id="section__poster">
                 <div class="dd">
                     <div class="video_name sa sa-up">CONCEPT POSTER</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" 맘스터치 "</div>
+                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" I WILL "</div>
                     <div class="touch_information sa sa-down pc_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        <br><br><br><br><br><br>
+                    </div>
                    
                 </div>
                 <div>
-                    <figure class="individual_img sa sa-right pc_only" data-sa-delay="400"><img src="../images/individual/poster.png"></figure>
-                    <figure class="mobile_only sa sa-scaleUp img_mar" data-sa-delay="400"><img src="../images/individual/mobile/poster_mobile.png"></figure>
+                    <figure class="individual_img sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/shi_poster.jpg"></figure>
                 </div>
                 <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                    집을 떠올려 보면 온통
-                    추억이 가득하다. 어릴
-                    적 사진이 들어있는 액
-                    자.. 지금은 안쓰는 카세
-                    트.. 집에 있는 과거
-                    의 물건은 시간이 지남
-                    에 따라 닳고 낡아간
-                    다. 그렇지만 그 시간
-                    만큼 추억이 입</div>
+                        <br><br><br><br></div>
             </div>
 
 
@@ -275,46 +259,35 @@
                 <div class="inter">
                     <div class="inter_how sa sa-up"> INTERACTIVE ART</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 맘스터치 "</div>
-                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/individual_interaction.PNG" class="mobile__img"></figure>
+                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 방향성 "</div>
+                    <figure id="howto_img" class= "img_mar sa sa-scaleUp" data-sa-delay="200"><img src="../images/individual/view/shi_view_1.png" class="mobile__img"></figure>
                     <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                        집을 떠올려 보면 온통
-                        추억이 가득하다. 어릴
-                        적 사진이 들어있는 액
-                        자.. 지금은 안쓰는 카세
-                        트.. 집에 있는 과거
-                        의 물건은 시간이 지남
-                        에 따라 닳고 낡아간
-                        다. 그렇지만 그 시간
-                        만큼 추억이 입</div>
+                        방향성의 의미를 빛과 어둠의 대조로 표현하였다.</div>
                 </div>
                 <div class="how">
                     <div>
                         <div class="how pc_only">
-                            <div class="howto sa sa-up ">사용 도구</div>
-                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터</div>
+                            <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
+                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터, 아두이노 센서(바람센서, 초음파센서)</div>
                         </div>
                         <div class="how">
-                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" 맘스터치 "</div>
+                            <div class="howto sa sa-up pc_only"data-sa-delay="200">" 방향성 "</div>
                             <div class="howto_explain pc_only"> 
-                                <div class = "sa sa-left" data-sa-delay="300">집을 떠올려 보면 온통 추억이 가득하다.</div>
-                                <div class = "sa sa-left" data-sa-delay="400">어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. </div>
-                                <div class = "sa sa-left" data-sa-delay="500"> 집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. </div>
-                                <div class = "sa sa-left" data-sa-delay="600">그렇지만 그 시간만큼 추억이 입</div>
+                                <div class = "sa sa-left" data-sa-delay="300">방향성의 의미를 빛과 어둠의 대조로 표현하였다.</div>
                             </div>
                         </div>
                             <div class="how" style="min-width:320px;width:100%;">
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/individual_how1.PNG"></figure>
-                                    <div class="sequence_ex sa sa-right pc_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-up pc_only"><img src="../images/individual/flow/shi/shi_flow_1.png"></figure>
+                                    <div class="sequence_ex sa sa-right pc_only">1. 사용자 입장과 함께 사운드, 화면 출력</div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/individual_how2.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/flow/shi/shi_flow_2.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">2. 향함에 따라 변화된 사운드, 화면 출력 </div>
                                 </div>
                                 <div>
-                                    <figure class="sequence sa sa-up pc_only" data-sa-delay="200"><img src="../images/individual/individual_how3.PNG" ></figure>
-                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                                    <figure class="sequence sa sa-down pc_only" data-sa-delay="100"><img src="../images/individual/flow/shi/shi_flow_3.png" ></figure>
+                                    <div class="sequence_ex sa sa-right pc_only" data-sa-delay="100">3. 대상과 멀어짐에 따라 변화되는 사운드, 화면 </div>
                                 </div>
                             </div>
                     </div>
@@ -327,17 +300,17 @@
         <div style="overflow-x:auto">
             <div class = "how_mobile" style="min-width:320px;width:100%;">
                 <div>
-                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/mobile/individual_how1_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only">1. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-up mobile_only"><img src="../images/individual/flow/shi/shi_flow_1.png"></figure>
+                    <div class="sequence_ex sa sa-right mobile_only">1. 사용자 입장과 함께 사운드, 화면 출력</div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/mobile/individual_how2_mobile.png"></figure>  
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 집을 떠올려 보면 온통 추억이 가득하다.</div>
+                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/flow/shi/shi_flow_2.png" ></figure>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">2. 향함에 따라 변화된 사운드, 화면 출력 </div>
                 </div>
                 <div>
-                    <figure class="sequence sa sa-up mobile_only" data-sa-delay="200"><img src="../images/individual/mobile/individual_how3_mobile.png"></figure>
-                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="200">3. 집을 떠올려 보면 온통 추억이 가득하다.</div>
-                </div>  
+                    <figure class="sequence sa sa-down mobile_only" data-sa-delay="100"><img src="../images/individual/flow/shi/shi_flow_3.png" ></figure>
+                    <div class="sequence_ex sa sa-right mobile_only" data-sa-delay="100">3. 대상과 멀어짐에 따라 변화되는 사운드, 화면 </div>
+                </div>
             </div> 
         </div>
         <div class="scroll-bar">
@@ -353,7 +326,6 @@
             <div class="scroll-bar__divider"><a class="scroll-bar__divider__name" data-target="#section__end">End</a></div>
             <div class="scroll-bar__margin"></div>
         </div>
-
 </body>
 
 <script src="../js/scroll.js"></script>
